--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@mantine/form": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tabler/icons-react": "^2.23.0",
+    "firebase": "^9.23.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
