--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.13",
+    "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.13",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
