--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "redux-persist": "^6.0.0",
