--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "framer-motion": "^10.12.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
