--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@mantine/hooks": "^6.0.13",
     "@reduxjs/toolkit": "^1.9.5",
     "framer-motion": "^10.12.21",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-loading": "^2.0.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "swiper": "^10.0.2"
   },
